# BetaReactTutorial

./: .bazelrc  .gitignore  .npmrc  BUILD.bazel  README.md  WORKSPACE  gh-pages.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.gh-page.ts  vite.config.subdir.ts  vite.config.ts
.github/workflows/: build.yml  gh-pages.yml
src/: App.tsx  BUILD.bazel  BUILD.bazel.unused  main.tsx
src/components/: Board.module.css  Board.module.scss  Board.tsx  Game.tsx  Square.tsx  ToolBar.tsx
src/const/: GameGrid.tsx
src/contexts/: BoardCfgContext.tsx
src/hooks/: AI.tsx  calculateWinner.tsx
src/logic/: calculateWinner.tsx
src/pages/: App.tsx  Setup.tsx
src/stores/: BoardCfgContext.tsx  BoardConfig.tsx
src/types/: AI.tsx  BoardCfg.tsx  BoardConfig.tsx  BoardInfo.tsx  Boardconst.tsx
src/utils/: getStatusText.tsx
