load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:vite/package_json.bzl", vite_bin="bin")

npm_link_all_packages(name = "node_modules")

DEPS = [
    "//src", 
    # "//public",
    # "package.json",
    #  ":node_modules/@mui/material",
    #  ":node_modules/react",
    #  ":node_modules/react-dom",
    #  ":node_modules/react-router-dom",
    # ":node_modules/typescript",
    # ":node_modules/zustand",
]



vite_bin.vite(
    name="vite", 
    args = ["build"],
    srcs = DEPS,
    out_dirs = ["build"],
)

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)


# js_binary(
#     name="vite",
#     data = ["//:node_modules/vite"],
#     entry_point = "bin/vite.js",
# )